--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -37,6 +36,8 @@
     ]
   },
   "devDependencies": {
-    "msw": "^0.47.3"
+    "axios": "1.2.0",
+    "msw": "^0.47.3",
+    "react-router-dom": "^6.4.4"
   }
 }
